# imgcompress

./: .gitignore  CMakeLists.txt  README.md  statement.md
include/: ImageLoader.hpp
src/: ImageLoader.cpp  main.cpp
